front/style.css
#header {
    display: flex;
    flex-direction: column;
    width: 100vw;
    align-items: center;
    text-align: center;
}

h1 {
    width: fit-content;
}

#content {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: left;
    width: 100vw;
    gap: 30px;
}

#searchButton {
    height: 33px;
    width: 400px;
}

#searchByWord {
    background-color: lightgray;
    background-image: url(./resources/search.svg);
    background-repeat: no-repeat;
    height: 39px;
    width: 36px;
    background-position: center;
    background-size: 75%;
    border-radius: 5px;
}
#searchByWord:hover {
    background-color: rgb(155, 155, 155);
}

#createTask {
    background-color: blue;
    color: white;
    font-size: 16px;
    font-family: Arial, sans-serif;
    border: none;
    height: 40px;
    width: 100px;
    border-radius: 10px;
    padding: 2px;
}

#createForm {
    flex-direction: column;
    align-items: left;
    justify-content: space-evenly;
    width: 50vw;
    height: 50vh;
}

#updateForm {
    flex-direction: column;
    align-items: left;
    justify-content: space-evenly;
    width: 50vw;
    height: 50vh;
}

.popup {
    display: none;
    position:fixed;
    top: 50vh;
    left: 50vw;
    border: 3px solid #f1f1f1;
    transform: translate(-50%, -50%);
}

.task-item {
    display: flex;
    flex-direction: row;
    justify-content:space-evenly;
    align-items: center;
    width: 60vw;
    padding: 10px;
    border: 3px solid black;
    border-radius: 10px;
    margin: 5px;
    background-color: white;
}


.delete-button {
    background-color: red;
    color: white;
    border: black 2px solid;
    border-radius: 10px;
    padding: 10px;
}
.delete-button:hover {
    background-color: rgb(173, 4, 4);
}

.edit-button {
    background-color: cyan;
    color:black;
    border: black 2px solid;
    border-radius: 10px;
    padding: 10px;
}
.edit-button:hover {
    background-color: rgb(3, 179, 179);
}

p {
    width: 25%;
}

.button-container {
    display: flex;
    flex-direction: row;
    justify-content:center;
    gap: 20px;
    width: 25%;
}

#task-list {
    margin-top: 20px;
    background-color: rgb(235, 223, 225);
    width: fit-content;
    padding: 15px 18px;
    border-radius: 10px;
    display: flex;
    flex-direction: column;
    gap: 5px;
}

